--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ p {
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
-    color: #ffffff;
+    color: black;
 }
 
 .search-engine-optimization img {
