--- a/style.css
+++ b/style.css
@@ -155,10 +155,10 @@ p {
 .social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
-    height: 300px;
+    height: 400px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
-    color: black;
+    color: white;
 }
 
 .search-engine-optimization img {
